--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,16 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y bc build-essential python3 python-is-python3 \
-          gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libelf-dev \
-          bison flex libssl-dev qtbase5-dev wget pahole
+          sudo apt-get install -y bc build-essential python3 python-is-python3 gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libelf-dev bison flex libssl-dev qtbase5-dev wget pahole
 
       - name: Fetch Toolchain
         run: |
           mkdir -p clang
-          # Using wget to better handle redirects for large binaries
           wget -q --show-progress https://github.com/Zyin87/Clang/raw/main/clang-r487747c.tar.gz -O clang.tar.gz
-          
-          # Check if the file is a valid gzip to prevent the "not in gzip format" crash
           if ! file clang.tar.gz | grep -q "gzip compressed data"; then
-            echo "ERROR: Downloaded file is invalid. GitHub likely served an error page or LFS pointer."
+            echo "ERROR: Downloaded file is invalid."
             exit 1
           fi
-          
           tar -xzf clang.tar.gz -C clang
           rm clang.tar.gz
 
@@ -44,14 +38,8 @@ jobs:
           export CROSS_COMPILE=aarch64-linux-gnu-
           export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
           export CLANG_TRIPLE=aarch64-linux-gnu-
-          
-          # Configure and Build
           make O=out CC=clang ARCH=arm64 vendor/wayne_defconfig
-          make -j$(nproc --all) O=out \
-            CC=clang \
-            CLANG_TRIPLE=aarch64-linux-gnu- \
-            CROSS_COMPILE=aarch64-linux-gnu- \
-            CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+          make -j$(nproc --all) O=out CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi-
 
       - name: Upload Kernel Image
         uses: actions/upload-artifact@v4
